# Research-Copilot

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 202606150001_initial_schema.py  202606160200_initial_schema_with_email_password_auth.py  202606170100_session_messages_followup_chat.py  202606220100_rename_sessions_to_briefs.py  202606240100_messages_kind_discriminator.py
backend/app/: main.py
backend/app/api/: auth.py  briefs.py  chats.py  sessions.py  users.py  workflow.py
backend/app/core/: auth.py  config.py  errors.py  logging.py  security.py
backend/app/domain/: brief.py  chat.py  events.py  message.py  report.py  session.py  user.py
backend/app/persistence/: checkpointer.py  db.py  models.py  repositories.py
backend/app/providers/: factory.py
backend/app/services/: auth_service.py  background.py  brief_service.py  chat_service.py  event_bus.py  job_store.py  pdf_export.py  report_chat.py  session_service.py  user_service.py  worker_trigger.py  workflow_service.py
backend/app/workflow/: deps.py  graph.py  helpers.py  key_rotation.py  prompts.py  smoke.py  state.py
backend/tests/: conftest.py  test_briefs.py  test_health.py  test_sessions.py  test_users_and_chats.py
backend/tests/integration/: test_chat_stream.py  test_workflow_graph.py  test_workflow_run.py
backend/tests/unit/: test_chat_service.py  test_event_bus.py  test_key_rotation.py  test_workflow_nodes.py  test_workflow_research_tools.py
(+95 files in other folders)
