[project]
name = "research-copilot-backend"
version = "0.1.0"
description = "AI Research Copilot — FastAPI + LangGraph backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "asyncpg>=0.30",
    "psycopg[binary,pool]>=3.2",
    "structlog>=24.4",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "tavily-python>=0.5",
    "clerk-backend-api>=1.0",
    "weasyprint>=63.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
